--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,19 +1,31 @@
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-	-webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 .item-enter {
-	opacity: 0;
-  }
-  .item-enter-active {
-	opacity: 1;
-	transition: opacity 500ms ease-in;
-  }
-  .item-exit {
-	opacity: 1;
-  }
-  .item-exit-active {
-	opacity: 0;
-	transition: opacity 500ms ease-in;
-  }
+  opacity: 0;
+}
+
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
+
+.item-exit {
+  opacity: 1;
+}
+
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+}
+
+.item-enter-done:hover {
+  background: #fdbfbf;
+  -moz-filter: grayscale(0%);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  cursor: pointer;
+}
